8286671: Update test pursuant to JEP 424 integration